# spline_opt

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  rebuild.sh
src/: CMakeLists.txt  main.cpp
